<resources>
    <string name="app_name">Skol-app</string>

    <string name="page_heading">@string/Tab_1</string>

    <string name="Tab_1">Nyheter</string>
    <string name="Tab_2">Schema</string>
    <string name="Tab_3">Matsedel</string>
    <string name="Tab_4">Läxor</string>
    <string name="Tab_5">Login</string>
    <string name="Tab_6">Send</string>

    <string name="Hint_förnamn"><i>Förnamn</i></string>
    <string name="Hint_efternamn"><i>Efternamn</i></string>
    <string name="Hint_telefon"><i>Telefon</i></string>
    <string name="Hint_stad"><i>Stad</i></string>
    <string name="Hint_personnummer"><i>ååmmdd</i></string>
    <string name="Hint_passcod"><i>Lösenkod</i></string>
    <string name="Hint_novacode"><i>xxxx</i></string>

    <string name="Buttontext_registrera">Registrera</string>
    <string name="Buttontext_logga_in">Logga in</string>
    <string name="Buttontext_logga_ut">Logga ut</string>

    <string name="Buttontext_rösta">Rösta</string>

    <string name="Måndag">Måndag</string>
    <string name="Tisdag">Tisdag</string>
    <string name="Onsdag">Onsdag</string>
    <string name="Torsdag">Torsdag</string>
    <string name="Fredag">Fredag</string>

    <string name="register_link"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfbgeZ2UMpuHDqSagZc2u39tjNhzmEF0toBYRsfFIyz6psiew/viewform">Klicka här</a> för att registrera dig</string>

    <string name="info_text">Dina fyra sista siffror i ditt personnummer sparas endast lokalt på din enhet och används enbart för att hämta ditt personliga schema.\n\n/IT-Utskottet (Calculinc)</string>
    <string name="ok">Ok</string>
    <string name="matsedel_ditt_resultat">Ok</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="Calculinc_stamp">© 2017 CALCULINC ALL RIGHTS RESERVED</string>

    <string-array name="typ_array">
        <item>Mitt Schema</item>
        <item>Klass</item>
        <item>Lärare</item>
        <item>Sal</item>
    </string-array>

</resources>
