<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nyheter"
            android:icon="@drawable/ic_art_track_black_24dp"
            android:title="@string/Tab_1" />
        <item
            android:id="@+id/nav_schema"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/Tab_2" />
        <item
            android:id="@+id/nav_matsedel"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/Tab_3" />
        <item
            android:id="@+id/nav_laxor"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Tab_4" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/Tab_5" />
    </group>

</menu>
