<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="calculinc.google.httpssites.skol_app.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorLoginBackground">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:src="@drawable/applogga" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="left"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="3dp" >

                <EditText
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/name1"
                    android:layout_marginTop="32dp"
                    android:paddingLeft="8dp"
                    android:background="@drawable/text_box"
                    android:hint="@string/Hint_förnamn"
                    android:inputType="text"
                    android:textColor="@color/colorLoginText"
                    android:textColorHint="@color/colorLoginTextHint" />

                <EditText
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/mobile_number"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="8dp"
                    android:background="@drawable/text_box"
                    android:hint="@string/Hint_telefon"
                    android:inputType="phone"
                    android:textColor="@color/colorLoginText"
                    android:textColorHint="@color/colorLoginTextHint" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/Hint_personnummer"
                    android:paddingLeft="8dp"
                    android:background="@drawable/text_box"
                    android:inputType="number"
                    android:textColor="@color/colorLoginText"
                    android:textColorHint="@color/colorLoginTextHint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="left"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="3dp" >

                <EditText
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/name2"
                    android:layout_marginTop="32dp"
                    android:paddingLeft="8dp"
                    android:background="@drawable/text_box"
                    android:hint="@string/Hint_efternamn"
                    android:inputType="text"
                    android:textColor="@color/colorLoginText"
                    android:textColorHint="@color/colorLoginTextHint" />

                <EditText
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/city"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="8dp"
                    android:background="@drawable/text_box"
                    android:hint="@string/Hint_stad"
                    android:inputType="text"
                    android:textColor="@color/colorLoginText"
                    android:textColorHint="@color/colorLoginTextHint" />

                <Spinner
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:dropDownSelector="@color/colorLoginDropdownBackground"
                    android:background="@drawable/text_box_spinner"
                    android:id="@+id/fidget_spinner"
                    android:textColor="@color/colorLoginText"
                    android:textColorHint="@color/colorLoginTextHint"
                    android:popupBackground="@color/colorLoginDropdownSelected" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="303dp"
            android:layout_height="33dp"
            android:layout_marginTop="20dp"
            android:text="@string/Buttontext_registrera"
            android:textStyle="normal"
            android:textColor="@color/colorLoginText"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_special"
            android:onClick="loginSubmit" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
